p4debuglog.txt
 
 gcc -g p4final.c
p4final.c: In function ‘sumofarray’:
p4final.c:17:11: error: expected expression before ‘<’ token
   for(i=0;<n;i++){
           ^
p4final.c: In function ‘output’:
p4final.c:25:11: error: expected expression before ‘<’ token
   for(i=0;<n-1;++){
           ^
p4final.c:25:18: error: expected expression before ‘)’ token
   for(i=0;<n-1;++){
                  ^
p4final.c: In function ‘main’:
p4final.c:31:5: warning: implicit declaration of function ‘input_array_size’; did you mean ‘input_arry_size’? [-Wimplicit-function-declaration]
   n=input_array_size();
     ^~~~~~~~~~~~~~~~
     input_arry_size
 gdb a.out
GNU gdb (Ubuntu 8.1.1-0ubuntu1) 8.1.1
Copyright (C) 2018 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
---Type <return> to continue, or q <return> to quit---b main
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from a.out...done.
(gdb) r
Starting program: /home/runner/IA1-Revision-7/a.out 
warning: Error disabling address space randomization: Operation not permitted
enter the valu of n
n
the sum of 32513 number is 528563841[Inferior 1 (process 509) exited normally]
(gdb) 